--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,8 +1,7 @@
 name: CI/CD WORKFLOW
-
 on:
   push:
-    branches: [ restassured ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -24,7 +23,7 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           ISSUER: ${{ secrets.ISSUER }}
           TOKEN_EXPIRE_TIME: ${{ secrets.TOKEN_EXPIRE_TIME }}
-        run: mvn --batch-mode clean package -DskipTests
+        run: mvn --batch-mode clean package
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -41,4 +40,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: fakecake/policymatch:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hotel_api:latest
