--- a/src/main/resources/public/config.properties
+++ b/src/main/resources/public/config.properties
@@ -1,3 +1,4 @@
-SECRET_KEY="841D8A6C80CBA4FCAD32D5367C18C5"    // nøgle der signerer token
-ISSUER="Thomas Hartmann"  // virksomhedens navn
+SECRET_KEY=D841D8A6C80CBA4FCAD32D5367C18C5J
+ISSUER="Istimereal"
 TOKEN_EXPIRE_TIME=1800000
+DB_NAME="policymatch"
