﻿Merge branch 'main' of https://github.com/Istimereal/policy_match_api into developer # Please enter a commit message to explain why this merge is necessary, # especially if it merges an updated upstream into a topic branch. # # Lines starting with '#' will be ignored, and an empty message aborts # the commit.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,4 +40,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/policyMatch_api:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/policymatch_api:latest
