--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 
     <dependencies>
 
+        <!-- chatGPT dep  -->
+        <dependency>
+            <groupId>com.openai</groupId>
+            <artifactId>openai-java</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <!-- Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
